Implement DTO responses, ExceptionHandler, Liquibase migrations and PostgreSQL